--- a/site-reliability-engineer.html
+++ b/site-reliability-engineer.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qer9Vfwt&k=Job&j=o377afwb&__jvst=Employee&__jvsd=s1TiViwU&__jvsc=Twitter&bid=n8ZtlMwc'>Smarsh Careers - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -126,7 +126,7 @@
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AiryRooms/743999698105617-infrastructure-engineer-cloud-site-reliability-devsecops-'>Airy Rooms Infrastructure Engineer (Cloud/Site Reliability/DevSecOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -216,7 +216,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/San-Francisco-California/Sr-Engineer--BizOps-Offers-Support_R-90421'>Site Reliability Engineer, BizOps (Offers Support)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/San-Francisco-California/Sr-Engineer--BizOps-Offers-Support_R-90421'>Site Reliability Engineer, BizOps (Offers Support)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... ... and to proactively manage production and change activities to maximize 
 customer experience, and increase the overall value of supported applications.</p>
@@ -253,7 +253,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697684365-principal-site-reliability-engineer'>Optimizely Principal Site Reliability Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999697684365-principal-site-reliability-engineer'>Optimizely Principal Site Reliability Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -261,7 +261,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/22144891-98dc-4593-9281-799580461583'>Falcon.io - Site Reliability Engineer</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -281,7 +281,7 @@ customer experience, and increase the overall value of supported applications.</
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/bYQApJnq23/Experienced-Site-Reliability-Engineer'>Experienced Site Reliability Engineer - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 6, 2019 ... Experienced Site Reliability Engineer. Remote, Multiple Countries; Full Time; 
 Engineering; Experienced. Share. Theorem is a software consultancy that 
@@ -316,7 +316,7 @@ team based in Wellington. At SilverStripe, our mission is to help everyone have?
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
-<h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://theorem.applytojob.com/apply/kxRe2aoddH/Experienced-Site-Reliability-Engineer-London'>Experienced Site Reliability Engineer ? London - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -376,7 +376,7 @@ Algorithmia makes scalable Machine Learning fast, simple, and cost-effective for
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
+<h5><a href='https://golang.cafe/job/senior-software-engineer-or-site-reliability-engineer-micro-1571243556'>Senior Software Engineer or Site Reliability Engineer at Micro</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
