--- a/data-analyst.html
+++ b/data-analyst.html
@@ -72,7 +72,7 @@
 	
 <!--Begin body here --> 
 <h5><a href='http://profacebook.applytojob.com/apply/KNguSTIoDu/Data-Analyst-9591170'>Data Analyst (9591170) - PRO Unlimited @ Facebook - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/ironcladts/430ed39b-425f-4d74-b326-6077344de6c7'>Ironclad Technology Services - Oracle Database Analyst</a></h5> 
@@ -157,7 +157,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nubank/jobs/1893969?gh_src=1d5d44ee1'>Job Application for Data Scientist (Econometrics/Statistics Specialist) at Nubank</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -442,7 +442,7 @@ organization?...</p>
 <p><span class="badge badge-light">Bellevue, WA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4/apply'>Kyivstar - Data Analyst BI</a></h5> 
+<h5><a href='https://jobs.lever.co/kyivstar/f6efa962-89d1-4db6-bdd2-e48a454781f4/apply'>Kyivstar - Data Analyst BI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 20, 2019 ... Data Analyst BI. Kyiv, Ukraine. KYIVSTAR ???????? ? Analytical Hub & CEM. Full
 -time. Submit your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't?...</p>
